# ark-discord-bot

./: .cljfmt.edn  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.graalvm-agent  LICENSE  Makefile  README.md  __main__.py  bb.edn  build.clj  deps.edn  docker-compose.yml  pyproject.toml  renovate.json5  requirements.txt
.clj-kondo/: config.edn
.clj-kondo/hooks/: fn_size.clj
.github/workflows/: auto-merge.yml  build-and-deploy.yml  ci-clj.yml  ci.yml  claude.yml
clj/: Dockerfile  README.md  bb.edn  deps.edn
clj/.clj-kondo/: config.edn
clj/.clj-kondo/hooks/: fn_size.clj
clj/.cpcache/: 1311944667.basis  1311944667.cp
clj/src/ark_discord_bot/: config.clj  core.clj  state.clj
clj/test/ark_discord_bot/: config_test.clj  core_test.clj
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secret.yaml
k8s/lolice/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secret.yaml
resources/: config.edn
src/ark_discord_bot/: __init__.py  config.clj  config.py  core.clj  discord_bot.py  kubernetes_manager.py  main.clj  main.py  rcon_manager.py  server_monitor.py  server_status_checker.py  state.clj  system.clj
src/ark_discord_bot/core/: commands.clj  monitor.clj  status.clj
src/ark_discord_bot/discord/: gateway.clj
src/ark_discord_bot/effects/: discord.clj  (+3 more)
test/ark_discord_bot/: main_test.clj  state_test.clj
tests/: __init__.py  test_discord_bot.py  test_discord_bot_simple.py  test_kubernetes_manager.py  test_rcon_manager.py  test_server_monitor.py  test_server_status_checker.py
(+61 files in other folders)
