[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ark-discord-bot"
version = "0.1.0"
description = "Discord bot for managing ARK: Survival Ascended server"
authors = [{name = "boxp", email = "boxp@example.com"}]
dependencies = [
    "discord.py==2.6.4",
    "kubernetes==28.1.0",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.1",
    "aiohttp==3.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
]
